v0.2.1/_sources/gallery/index.rst.txt
:orphan:



.. _sphx_glr_gallery:

.. _gallery:

Gallery
=======

This gallery contains examples of what PyGMT can do. Click on any example to see the
code used to generate it.


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_line:

Lines
-----



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.plot method can plot lines in different styles. The default line style is a 0....">

.. only:: html

 .. figure:: /gallery/line/images/thumb/sphx_glr_linestyles_thumb.png
     :alt: Line styles

     :ref:`sphx_glr_gallery_line_linestyles.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/line/linestyles
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_coast:

Coastlines and boundaries
-------------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The borders argument of pygmt.Figure.coast specifies levels of political boundaries to plot and...">

.. only:: html

 .. figure:: /gallery/coast/images/thumb/sphx_glr_borders_thumb.png
     :alt: Political Boundaries

     :ref:`sphx_glr_gallery_coast_borders.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/coast/borders

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The land and water arguments of pygmt.Figure.coast specify a color to fill in the land and wate...">

.. only:: html

 .. figure:: /gallery/coast/images/thumb/sphx_glr_land_and_water_thumb.png
     :alt: Color land and water

     :ref:`sphx_glr_gallery_coast_land_and_water.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/coast/land_and_water

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use pygmt.Figure.coast to display shorelines as black lines. ">

.. only:: html

 .. figure:: /gallery/coast/images/thumb/sphx_glr_shorelines_thumb.png
     :alt: Shorelines

     :ref:`sphx_glr_gallery_coast_shorelines.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/coast/shorelines
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_plot:

Plotting map items
------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.colorbar method creates a color scalebar. We must specify the colormap via the...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_colorbar_thumb.png
     :alt: Colorbar

     :ref:`sphx_glr_gallery_plot_colorbar.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/colorbar

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.legend method can automatically create a legend for symbols plotted using pygm...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_legend_thumb.png
     :alt: Legend

     :ref:`sphx_glr_gallery_plot_legend.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/legend

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.meca method can plot focal mechanisms, or beachballs. We can specify the focal...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_meca_thumb.png
     :alt: Focal mechanisms

     :ref:`sphx_glr_gallery_plot_meca.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/meca

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Points can be plotted with different transparency levels by passing in an array to the transpar...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_points-transparency_thumb.png
     :alt: Points with varying transparency

     :ref:`sphx_glr_gallery_plot_points-transparency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/points-transparency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.plot method can plot points. We must specify the plot symbol and size through ...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_points_thumb.png
     :alt: Points

     :ref:`sphx_glr_gallery_plot_points.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/points

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To create a scatter plot with a legend one may use a loop and create one scatter plot per item ...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_scatter_thumb.png
     :alt: Scatter plots with a legend

     :ref:`sphx_glr_gallery_plot_scatter.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/scatter

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.plot3d method can be used to plot symbols in 3D. In the example below, we show...">

.. only:: html

 .. figure:: /gallery/plot/images/thumb/sphx_glr_scatter3d_thumb.png
     :alt: 3D Scatter plots

     :ref:`sphx_glr_gallery_plot_scatter3d.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/plot/scatter3d
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_gallery_grid:

Grids
-----



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.Figure.grdview() method can plot 3-D surfaces with surftype=&quot;s&quot;. Here, we supply the ...">

.. only:: html

 .. figure:: /gallery/grid/images/thumb/sphx_glr_grdview_surface_thumb.png
     :alt: Plotting a surface

     :ref:`sphx_glr_gallery_grid_grdview_surface.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/grid/grdview_surface

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The pygmt.grdtrack function samples a raster grid&#x27;s value along specified points. We will need ...">

.. only:: html

 .. figure:: /gallery/grid/images/thumb/sphx_glr_track_sampling_thumb.png
     :alt: Sampling along tracks

     :ref:`sphx_glr_gallery_grid_track_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/grid/track_sampling
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
